[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/customer_temp.png" type="Texture" id=1]
[ext_resource path="res://src/Customer.gd" type="Script" id=2]
[ext_resource path="res://src/AI.gd" type="Script" id=3]
[ext_resource path="res://assets/Sounds/talk1.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.83247
height = 10.8677

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.15834
height = 17.2543

[sub_resource type="CircleShape2D" id=3]
radius = 64.4003

[node name="Customer" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.105118, 0.210224 )
shape = SubResource( 4 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 5 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 3 )

[node name="RoamTimer" type="Timer" parent="AI"]
wait_time = 3.0
one_shot = true

[node name="Talk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="AI/RoamTimer" to="AI" method="_on_RoamTimer_timeout"]
